fixed overflow bug

--- a/style.css
+++ b/style.css
@@ -1,12 +1,11 @@
-#LastFM{
-	font-family: Helvetica, Futura, Garamond;
+#LastFM {
+  font-family: Helvetica, Futura, Garamond;
 }
-.playing{
-	color: green;
-	  box-shadow: 0 0 0 rgba(43, 255, 71, 0.4);
+.playing {
+  color: green;
+  box-shadow: 0 0 0 rgba(43, 255, 71, 0.4);
   animation: pulse 5s infinite;
   padding: 2px;
-
 }
 
 @-webkit-keyframes pulse {
@@ -14,10 +13,10 @@
     -webkit-box-shadow: 0 0 0 0 rgba(43, 255, 71, 0.4);
   }
   70% {
-      -webkit-box-shadow: 0 0 0 10px rgba(43, 255, 71, 0);
+    -webkit-box-shadow: 0 0 0 10px rgba(43, 255, 71, 0);
   }
   100% {
-      -webkit-box-shadow: 0 0 0 0 rgba(43, 255, 71, 0);
+    -webkit-box-shadow: 0 0 0 0 rgba(43, 255, 71, 0);
   }
 }
 @keyframes pulse {
@@ -26,16 +25,16 @@
     box-shadow: 0 0 0 0 rgba(43, 255, 71, 0.4);
   }
   70% {
-      -moz-box-shadow: 0 0 0 10px rgba(43, 255, 71, 0);
-      box-shadow: 0 0 0 10px rgba(43, 255, 71, 0);
+    -moz-box-shadow: 0 0 0 10px rgba(43, 255, 71, 0);
+    box-shadow: 0 0 0 10px rgba(43, 255, 71, 0);
   }
   100% {
-      -moz-box-shadow: 0 0 0 0 rgba(43, 255, 71, 0);
-      box-shadow: 0 0 0 0 rgba(43, 255, 71, 0);
+    -moz-box-shadow: 0 0 0 0 rgba(43, 255, 71, 0);
+    box-shadow: 0 0 0 0 rgba(43, 255, 71, 0);
   }
 }
 
-
-.track{
-	height: 50px;
-color: black;}
+.track + .track {
+  margin: 24px 0;
+  color: black;
+}
